# MangaColorization

./: .gitignore  ETHICS_CHECKLIST.md  ML_Report.docx  README.md  pyproject.toml  requirements.txt  test_notebook.ipynb
experiments/baseline/: loss_history.csv
experiments/batch_size_32/: loss_history.csv
experiments/l1_200/: loss_history.csv
experiments/lr_0004/: loss_history.csv
src/: __init__.py  dataset.py  model.py
